# calculator

./: CMakeLists.txt  calculator.h  calculator_operations.cpp  main.cpp  makefile
